Fix hover menu being overlapped by post content

--- a/assets/styles/components/hover-menu.scss
+++ b/assets/styles/components/hover-menu.scss
@@ -13,7 +13,7 @@
 .hover-menu {
   display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   background: var(--dropdown-background, var(--primary));
   border: var(--border);
   box-shadow: var(--box-shadow);
